--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "new-app-name",
+  "name": "assignment3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-server-express": "^3.12.1",
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "mongodb": "^6.2.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
